--- a/country-list.html
+++ b/country-list.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Country List</title>
 </head>
 <body>
     <!--<div class="mx-auto mt-5 p-2 shadow" style="width:90%; background-color: rgb(215, 245, 250);">
@@ -12,8 +12,8 @@
             <ul class="mx-auto p-3" id="ul"></ul>
         </div>
     </div>-->
-    <div class="mx-auto mt-5 p-2 shadow" style="width:90%; background-color: rgb(215, 245, 250);">
-        <div class="mx-auto p-2 shadow" style="width:90%; background-color: azure;">
+    <div class="mx-auto mt-5 p-2 shadow" style="width:90%;">
+        <div class="mx-auto p-2" style="width:90%;">
             <div class="" style="text-align: center;">
                 <select class="mx-auto shadow" name="select" id="select">
                     <option value="">Select Name</option>
@@ -49,7 +49,7 @@
 <script>
 let obj = [
 {name: 'Afghanistan', code : 'AF'},
-{name: 'Åland Islands', code : 'AX'},
+{name: 'Aland Islands', code : 'AX'},
 {name: 'Albania', code : 'AL'},
 {name: 'Algeria', code : 'DZ'},
 {name: 'American Samoa', code : 'AS'},
