--- a/country-list.html
+++ b/country-list.html
@@ -43,7 +43,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-
+    <script src="country-list.js"></script>
 
 
 <script>
@@ -367,22 +367,7 @@ Object.entries(obj).forEach(([key, value]) => {
 });
 
 
- 
-
-
-var settings = {
-  "url": "https://api.countrystatecity.in/v1/countries",
-  "method": "GET",
-  "headers": {
-    "X-CSCAPI-KEY": "API_KEY"
-  },
-};
-
-$.ajax(settings).done(function (response) {
-  console.log(response);
-});
-    
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
