--- a/country-list.html
+++ b/country-list.html
@@ -7,11 +7,6 @@
     <title>Country List</title>
 </head>
 <body>
-    <!--<div class="mx-auto mt-5 p-2 shadow" style="width:90%; background-color: rgb(215, 245, 250);">
-        <div class="mx-auto p-2 shadow" style="width:90%; background-color: azure;">
-            <ul class="mx-auto p-3" id="ul"></ul>
-        </div>
-    </div>-->
     <div class="mx-auto mt-5 p-2 shadow" style="width:90%;">
         <div class="mx-auto p-2" style="width:90%;">
             <div class="" style="text-align: center;">
@@ -22,35 +17,12 @@
             <br>
             <br>
         </div>
-        <ul id="ageUl">
+        <ul id="countryInfo">
 
         </ul>
     </div>
-    <!--<nav class="nav justify-content-center fixed-top">
-        <a class="nav-link text-dark" href="#div1">Div 1</a>
-        <a class="nav-link text-dark" href="#div2">Div 2</a>
-        <a class="nav-link text-dark" href="#div3">Div 3</a>
-    </nav>
-    <div>
-        <div>
-            <div id="div1" class="bg-primary" style="height:100vh">div1</div>
-            <div id="div2" class="bg-success" style="height:100vh">div2</div>
-            <div id="div3" class="bg-light" style="height:100vh">div3</div>
-        </div>
-    </div>-->
 
-
-
-
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="country-list.js"></script>
-
-
-<script>
-
-
-
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
